[gd_scene load_steps=13 format=3 uid="uid://c8nullbcf0x5o"]

[ext_resource type="Script" uid="uid://flu07xi0hr8d" path="res://Scenes/thank_you.gd" id="1_4yvsi"]
[ext_resource type="Texture2D" uid="uid://byed1ljwunwsj" path="res://Resources/defaultBG.png" id="2_pk7cj"]
[ext_resource type="Texture2D" uid="uid://c8j07g2itxkeh" path="res://Resources/Arrows/dance.png" id="3_gl645"]
[ext_resource type="AudioStream" uid="uid://cd8rx6x6vochd" path="res://Resources/Songs/Epilogue.mp3" id="5_lpsmu"]
[ext_resource type="Texture2D" uid="uid://dsvxjtj2ay2mx" path="res://Resources/Arrows/NoteLeft.png" id="6_xipsy"]
[ext_resource type="Texture2D" uid="uid://dha00vxwgm1wr" path="res://Resources/Arrows/NoteLeftPress.png" id="7_kwgoi"]

[sub_resource type="Animation" id="Animation_hp770"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TransitionRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("bg:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("cont:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-447, -569)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("TransitionRect:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("who_would_have_known:volume_db")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-15.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("back:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.5, 0.5)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("back:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_c4g5w"]
resource_name = "start"
length = 55.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TransitionRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.23333, 52.9, 54.9667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("bg:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("cont:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 50),
"transitions": PackedFloat32Array(0.7, 1),
"update": 0,
"values": [Vector2(-447, 700), Vector2(-447, -2870)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(54.9667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"back"
}]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("who_would_have_known:volume_db")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(52.9333, 54.9667),
"transitions": PackedFloat32Array(6.27667, 1),
"update": 0,
"values": [-15.0, -80.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("back:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(52.2333, 54),
"transitions": PackedFloat32Array(8.87655, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(0, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("back:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 52.2333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_isk6x"]
_data = {
&"RESET": SubResource("Animation_hp770"),
&"start": SubResource("Animation_c4g5w")
}

[sub_resource type="Animation" id="Animation_gl645"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TransitionRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_4yvsi"]
resource_name = "back"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TransitionRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1.8025, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lpsmu"]
_data = {
&"RESET": SubResource("Animation_gl645"),
&"back": SubResource("Animation_4yvsi")
}

[node name="thank_you" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4yvsi")

[node name="bg" type="TextureRect" parent="."]
z_index = -5
layout_mode = 0
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
pivot_offset = Vector2(960, 540)
texture = ExtResource("2_pk7cj")

[node name="cont" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -447.0
offset_top = -569.0
offset_right = 499.0
offset_bottom = 2704.0
grow_horizontal = 2
grow_vertical = 2

[node name="ty" type="Label" parent="cont"]
z_index = 1
layout_mode = 2
theme_override_font_sizes/font_size = 75
text = "THANK YOU."
horizontal_alignment = 1

[node name="sep4" type="Label" parent="cont"]
z_index = 1
layout_mode = 2
theme_override_font_sizes/font_size = 100
horizontal_alignment = 1

[node name="text" type="Label" parent="cont"]
z_index = 1
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "I really enjoyed making this small
project. As well as game design itself.
I find it pretty fun.

I will keep on developing this game after I submit it,
I have always been a fan of rhythm games
and just music itself.

I have been developing this same \"Beatz\" game since
term 1 2024, made it for this same kind of assesment
but instead of a game engine it was pure javascript.

Currently i have 3 games all under the name \"Beatz\"
Beatz! 5.3 (JS)
Beatz! X (JS), and
Beatz! X (Desktop Port) (Godot)
(X because the main idea was
to have 10 notes to press)
And very honestly this little \"series\" of games i've
made are very special to me.
Not because i can use it to entertain myself or anything.
It's the process that's special to me.
Started Beatz! 5.3 in May of 2024.
That was one of the most memorable months I have
full recollection of.
Many things happened that month.
I was still the \"new kid\"
I didn't know much people.
I didn't talk as much.
But it was still fun.
Because I DID get to know many people.
That i still see to this day.
I DID get to make many memories.
That i still remember.
(I remember everything)
All of year 10 was special to me, and Beatz, was
what i consider my best work of year 10.
And I hope to make the desktop port
My best work of year 11.
And keep the streak going."
horizontal_alignment = 1

[node name="sep" type="Label" parent="cont"]
z_index = 1
layout_mode = 2
theme_override_font_sizes/font_size = 175
horizontal_alignment = 1

[node name="ty2" type="Label" parent="cont"]
z_index = 1
layout_mode = 2
theme_override_font_sizes/font_size = 55
text = "THANK YOU."
horizontal_alignment = 1

[node name="sep2" type="Label" parent="cont"]
z_index = 1
layout_mode = 2
theme_override_font_sizes/font_size = 200
horizontal_alignment = 1

[node name="code" type="Label" parent="cont"]
z_index = 1
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "AA AM aa AS aE AL AT AF
CMM | STW | CEB | BWJ | BTS | QZD"
horizontal_alignment = 1

[node name="sep3" type="Label" parent="cont"]
z_index = 1
layout_mode = 2
theme_override_font_sizes/font_size = 60
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="cont"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
texture = ExtResource("3_gl645")
expand_mode = 1
stretch_mode = 5

[node name="thank_you_animation_player" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_isk6x")
}
autoplay = "start"

[node name="TransitionRect" type="TextureRect" parent="."]
z_index = 10
layout_mode = 0
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
texture = ExtResource("2_pk7cj")

[node name="who_would_have_known" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_lpsmu")
volume_db = -15.0
autoplay = true
bus = &"Song"

[node name="back" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = -796.0
offset_bottom = -376.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(82, 82)
texture_normal = ExtResource("6_xipsy")
texture_pressed = ExtResource("7_kwgoi")

[node name="anim_back" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_lpsmu")
}

[connection signal="pressed" from="back" to="." method="_on_back"]
